# https://python-poetry.org/docs/

[tool.poetry]
name = "pybotx-fsm"
version = "0.5.0"
description = "FSM middleware for using with pybotx"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"

pybotx = ">=0.65.0"

[tool.poetry.dev-dependencies]
add-trailing-comma = "2.2.3"
autoflake = "2.3.1"
black = "22.3.0"
isort = "5.10.1"
mypy = "0.950.0"
wemake-python-styleguide = "0.18.0"

pytest = "8.3.5"
pytest-asyncio = "0.18.3"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
