# https://python-poetry.org/docs/

[tool.poetry]
name = "pybotx-fsm"
version = "0.6.0"
description = "FSM middleware for using with pybotx"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

pybotx = ">=0.75.0"

[tool.poetry.dev-dependencies]
add-trailing-comma = "3.1.0"
autoflake = "2.3.1"
black = "25.1.0"
isort = "6.0.1"
mypy = "1.15.0"
wemake-python-styleguide = "0.19.2"

pytest = "8.3.5"
pytest-asyncio = "0.26.0"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
