# https://python-poetry.org/docs/

[tool.poetry]
name = "pybotx-fsm"
version = "0.7.1"
description = "FSM middleware for using with pybotx"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

pybotx = ">=0.76.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
ruff = "^0.15.0"

pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
".snippets/*.py" = ["F401"]
